# OtterGB

./: .gitignore  CMakeLists.txt  README.md
assets/: default.cfg
audio/include/: AudioData.hpp  AudioMixer.hpp  AudioSampler.hpp  AudioUnit.hpp  FrequencySweep.hpp  LengthCounter.hpp  MidiFile.hpp  PianoKeys.hpp  ShiftRegister.hpp  SimpleSynthesizers.hpp  SoundBuffer.hpp  SoundManager.hpp  SoundMixer.hpp  SquareWave.hpp  Synthesizers.hpp  UnitTimer.hpp  VolumeEnvelope.hpp  WavFile.hpp  WaveTable.hpp
audio/source/: Audio.cpp  AudioData.cpp  AudioMixer.cpp  AudioSampler.cpp  AudioUnit.cpp  CMakeLists.txt  LengthCounter.cpp  MidiFile.cpp  PianoKeys.cpp  ShiftRegister.cpp  SimpleSynthesizers.cpp  SoundBuffer.cpp  SoundManager.cpp  SoundMixer.cpp  SquareWave.cpp  Synthesizers.cpp  UnitTimer.cpp  VolumeEnvelope.cpp  WavFile.cpp  WaveTable.cpp
cmake/modules/: FindQT.cmake
core/include/: ComponentTimer.hpp  HighResTimer.hpp  Opcode.hpp  Register.hpp  Support.hpp  SystemComponent.hpp  TextParser.hpp  optionHandler.hpp
core/source/: CMakeLists.txt  ComponentTimer.cpp  HighResTimer.cpp  Opcode.cpp  Register.cpp  Support.cpp  SystemComponent.cpp  SystemRegisters.cpp  TextParser.cpp  optionHandler.cpp
graphics/include/: Bitmap.hpp  ColorGBC.hpp  ColorPalette.hpp  ComponentThread.hpp  Graphics.hpp  GraphicsOpenGL.hpp  GraphicsSDL.hpp  ImageBuffer.hpp  KeyStates.hpp  colors.hpp
graphics/source/: Bitmap.cpp  CMakeLists.txt  ColorPalette.cpp  ComponentThread.cpp  GraphicsOpenGL.cpp  GraphicsSDL.cpp  ImageBuffer.cpp  KeyStates.cpp  colors.cpp
include/: AudioUnit.hpp  Bitmap.hpp  Cartridge.hpp  ColorGBC.hpp  ConfigFile.hpp  Console.hpp  DmaController.hpp  FrequencySweep.hpp  GPU.hpp  Graphics.hpp  HighRam.hpp  Joystick.hpp  LR35902.hpp  LengthCounter.hpp  MemoryController.hpp  Opcode.hpp  OpcodeLR35902.hpp  OpcodeNames.hpp  Opcodes.hpp  Serial.hpp  SerialController.hpp  ShiftRegister.hpp  Sound.hpp  SoundBuffer.hpp  SoundMixer.hpp  SpriteAttributes.hpp  SquareWave.hpp  Support.hpp  SystemClock.hpp  SystemComponent.hpp  SystemGBC.hpp  SystemRegisters.hpp  SystemTimer.hpp  TextParser.hpp  UnitTimer.hpp  VolumeEnvelope.hpp  WaveTable.hpp  WorkRam.hpp  colors.hpp  optionHandler.hpp  (+2 more)
qtfiles/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  untitled.pro
source/: AudioUnit.cpp  Bitmap.cpp  CMakeLists.txt  Cartridge.cpp  ColorGBC.cpp  ConfigFile.cpp  Console.cpp  DmaController.cpp  FrequencySweep.cpp  GPU.cpp  Graphics.cpp  Joystick.cpp  LR35902.cpp  LengthCounter.cpp  MemoryController.cpp  Opcode.cpp  OpcodeLR35902.cpp  Serial.cpp  SerialController.cpp  ShiftRegister.cpp  Sound.cpp  SoundBuffer.cpp  SoundMixer.cpp  SpriteAttributes.cpp  SquareWave.cpp  Support.cpp  SystemClock.cpp  SystemComponent.cpp  SystemGBC.cpp  SystemRegisters.cpp  SystemTimer.cpp  TextParser.cpp  UnitTimer.cpp  VolumeEnvelope.cpp  WaveTable.cpp  WorkRam.cpp  colors.cpp  gbc.cpp  optionHandler.cpp  sdlWindow.cpp  (+1 more)
tools/: CMakeLists.txt
tools/source/: CMakeLists.txt  Opcodes.hpp  disassembler.cpp  gbimage.cpp  interpreter.cpp  palettes.cpp
